--- a/bioSiteStyle.css
+++ b/bioSiteStyle.css
@@ -45,7 +45,7 @@ body{
     background-color: rgb(73,105,137);
     border-radius: 10px;
     padding: 5px;
-    margin: 20%;
+    margin: 10px;
     max-width: 100%;
 
 }
