--- a/bioSiteStyle.css
+++ b/bioSiteStyle.css
@@ -42,57 +42,70 @@ body{
 }
 
 .container {
-    position: relative;
+    overflow: hidden;
     background-color: rgb(73,105,137);
     border-radius: 10px;
     padding: 5px;
-    min-height: 150px;
-    max-height: fit-content;
-    margin: 10%;
+    margin: 10px 15px;
     max-width: 100%;
-    margin-top: 10%;
-
+    
 }
 
 .card {
     float: left;
     max-width: 25%;
+    max-height: fit-content;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    border: 1px solid rgb(226,244, 197)
+    padding: 0.5%;
+    border: 1px solid rgb(226,244, 197);
 }
-.card-title {
-    text-align: center;
-}
-.card-content{
-    text-align: center;
-}
+
 
 .card_blurb{
+    
     float: right;
-    max-width: 75%;
+    max-width: 60%;
+    text-align: justify;
+    padding: 0.5%;
+
 }
 
-.card2 {
-    float: right;
-    max-width: 25%;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-}
-
-.card2 img{
-    height: 200px;
+.card img {
+    padding: 0.5%;
     width: 100%;
 }
 
-.card2_blurb{
-    float: left;
-    max-width: 75%;
+.card2 {
+    
+    float: right;
+    max-width: 25%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    padding: 0.5%;
+    border: 1px solid rgb(226,244, 197);
 }
+
+
+.card_blurb2{
+    
+    float: left;
+    max-width: 60%;
+    text-align: justify;
+    padding: 0.5%;
+}
+
+.card2 img{
+    padding: 0.5%;
+    width: 100%;
+}
+
 
 #footer {
     position: absolute;
     margin-bottom: 0px;
+    margin-top: 10%;
     background-color: rgb(73,105,137);
     width: 100%;
+    height: 1em;
     text-align: right;
 }
 
