--- a/bioSiteStyle.css
+++ b/bioSiteStyle.css
@@ -5,6 +5,11 @@ header, body, footer, .container, #navbar {
     font-size: 16px;
     font-family: Arial, Arial, Helvetica, sans-serif;
 }
+h2 {
+    font-size: 20px;
+}
+
+
 
 header {
     background-color: rgb(73, 105, 137);
@@ -48,16 +53,18 @@ body{
     padding: 5px;
     margin: 10px 15px;
     max-width: 100%;
+    vertical-align: middle;
     
 }
 
 .card {
     float: left;
-    max-width: 25%;
-    max-height: fit-content;
+    max-width: 30%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    padding: 0.5%;
+    padding: 1%;
     border: 1px solid rgb(226,244, 197);
+    margin: 1%;
+    text-align: center;
 }
 
 
@@ -65,23 +72,29 @@ body{
     
     float: right;
     max-width: 60%;
-    text-align: justify;
-    padding: 0.5%;
+    text-align: center;
+    padding: 1%;
 
 }
 
 .card img {
-    padding: 0.5%;
+    padding: 1%;
     width: 100%;
+    text-align: center;
+    
 }
 
 .card2 {
     
     float: right;
-    max-width: 25%;
+    max-width: 30%;
+    max-height: 50%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    padding: 0.5%;
+    padding: 1%;
     border: 1px solid rgb(226,244, 197);
+    margin: 1%;
+    text-align: center;
+    
 }
 
 
@@ -89,24 +102,39 @@ body{
     
     float: left;
     max-width: 60%;
-    text-align: justify;
-    padding: 0.5%;
+    text-align: center;
+    padding: 1%;
 }
 
 .card2 img{
-    padding: 0.5%;
+    padding: 1%;
     width: 100%;
+    text-align: center;
 }
 
+.longText{
+    padding:3%;
+    margin: 5%;
+    background-color: rgb(88, 163, 153);
+    border-radius: 10px;
+    line-height: 1.75em;
+    
+}
+p {
+    text-indent:30px;
+}
 
 #footer {
     position: absolute;
     margin-bottom: 0px;
-    margin-top: 10%;
+    margin-top: 5%;
+    padding-top: 2.5%;
+    padding-right: 10px;
     background-color: rgb(73,105,137);
     width: 100%;
-    height: 1em;
+    height: 3%;
     text-align: right;
+    
 }
 
 #footer a {
