Added text for home page

--- a/bioSiteStyle.css
+++ b/bioSiteStyle.css
@@ -5,11 +5,20 @@ header, body, footer, .container, #navbar {
     font-size: 16px;
     font-family: Arial, Arial, Helvetica, sans-serif;
 }
+
 h2 {
     font-size: 20px;
 }
 
+figcaption a {
+    color: black;
+    text-decoration: none;
+}
 
+figcaption a:hover {
+    color: rgb(226,244, 197);
+    text-decoration: underline;
+}
 
 header {
     background-color: rgb(73, 105, 137);
@@ -66,6 +75,7 @@ body{
     border: 1px solid rgb(226,244, 197);
     margin: 1%;
     text-align: center;
+    
 }
 
 
@@ -83,6 +93,7 @@ body{
     padding: 1%;
     width: 100%;
     text-align: center;
+    
     
 }
 
@@ -124,6 +135,7 @@ body{
     overflow: hidden;
     
 }
+
 p {
     text-indent:30px;
 }
