--- a/bioSiteStyle.css
+++ b/bioSiteStyle.css
@@ -25,10 +25,13 @@ header {
     color: white;
     font-weight: 400;
     padding: 10px;
+    text-align: center;
+    
 }
 
 header img {
     max-width: 100%;
+    
 }
 
 #navbar {
